--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="TextAppearance.MarketApp.TitleLarge" parent="TextAppearance.Material3.TitleLarge">
+        <item name="android:textSize">@dimen/_14sdp</item>
+        <item name="fontFamily">@font/samim_bold_fd</item>
+        <item name="android:fontFamily">@font/samim_bold_fd</item>
+        <item name="lineSpacing">0sp</item>
+    </style>
+
     <style name="Theme.MarketApp.MediumTitle" parent="TextAppearance.Material3.TitleSmall">
         <item name="android:textSize">@dimen/_12sdp</item>
         <item name="fontFamily">@font/samim_bold_fd</item>
@@ -19,6 +26,17 @@
         <item name="fontFamily">@font/samim_fd</item>
         <item name="android:textSize">@dimen/_10sdp</item>
     </style>
+
+    <style name="Theme.MarketApp.LabelMedium" parent="TextAppearance.Material3.LabelMedium">
+        <item name="fontFamily">@font/samim_fd</item>
+        <!--<item name="android:textSize">@dimen/_8sdp</item>-->
+    </style>
+
+    <style name="Theme.MarketApp.LabelSmall" parent="TextAppearance.Material3.LabelSmall">
+        <item name="fontFamily">@font/samim_fd</item>
+        <!--<item name="android:textSize">@dimen/_6sdp</item>-->
+    </style>
+
 
     <style name="Widget.Market" parent="@android:style/Widget.Material" />
 
