--- a/app/src/main/res/layout/product_category_item_view.xml
+++ b/app/src/main/res/layout/product_category_item_view.xml
@@ -40,7 +40,7 @@
         android:layout_marginTop="@dimen/_16sdp"
         android:ellipsize="end"
         android:maxLines="2"
-        android:textAppearance="@style/Theme.MarketApp.SmallTitle"
+        android:textAppearance="@style/TextAppearance.MarketApp.TitleSmall"
         app:layout_constraintEnd_toEndOf="@id/glv_end"
         app:layout_constraintStart_toStartOf="@id/glv_start"
         app:layout_constraintTop_toBottomOf="@id/glh_half_screen"
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_8sdp"
         android:drawablePadding="@dimen/space_very_small"
-        android:textAppearance="@style/Theme.MarketApp.SmallBody"
+        android:textAppearance="@style/TextAppearance.MarketApp.BodySmall"
         app:drawableEndCompat="@drawable/ic_instock_24"
         app:layout_constraintEnd_toStartOf="@id/glv_end"
         app:layout_constraintStart_toEndOf="@id/glv_start"
@@ -68,7 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:drawablePadding="@dimen/space_very_small"
-        android:textAppearance="@style/Theme.MarketApp.SmallBody"
+        android:textAppearance="@style/TextAppearance.MarketApp.BodySmall"
         app:drawableStartCompat="@drawable/ic_toman_16dp"
         app:layout_constraintBottom_toTopOf="@id/product_regular_price"
         app:layout_constraintEnd_toStartOf="@+id/product_discount"
@@ -86,7 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_small"
         android:alpha="0.7"
-        android:textAppearance="@style/Theme.MarketApp.SmallBody"
+        android:textAppearance="@style/TextAppearance.MarketApp.BodySmall"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/product_price"
@@ -101,7 +101,7 @@
         android:background="?attr/colorError"
         android:paddingHorizontal="@dimen/_8sdp"
         android:paddingVertical="@dimen/_4sdp"
-        android:textAppearance="@style/Theme.MarketApp.SmallBody"
+        android:textAppearance="@style/TextAppearance.MarketApp.BodySmall"
         android:textColor="?attr/colorOnError"
         app:layout_constraintBottom_toBottomOf="@+id/product_price"
         app:layout_constraintEnd_toEndOf="@id/glv_end"
